force-app/src/objects/FAM__FA_Depreciation_Method__c.object
<CustomObject>
    <customHelpPage>FAM__DepreciationMethodHelp</customHelpPage>
    <description>Contains the ways in which you can calculate depreciation schedules in Fixed Asset Management.</description>
    <fields>
        <fullName>FAM__Calculation_Class__c</fullName>
        <description>Name of an Apex class that implements the DepreciationCalculation interface</description>
        <inlineHelpText>Name of an Apex class that implements the DepreciationCalculation interface</inlineHelpText>
        <label>Calculation Class</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAM__Display_Formula__c</fullName>
        <description>Display depreciation method formula image to user.</description>
        <formula>IF(FAM__Formula_URL__c != &apos;&apos;, IMAGE(FAM__Formula_URL__c , Name),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAM__Formula_URL__c</fullName>
        <description>The URL to the fix asset formula image inside the document folder Fix Asset</description>
        <label>Formula URL</label>
        <type>Url</type>
    </fields>
    <label>Depreciation Method</label>
    <listViews>
        <fullName>FAM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Depreciation Method Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depreciation Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>